# docs/swagger.json
@@ -8,11 +8,61 @@
     "host": "localhost:8002",
     "basePath": "/",
     "paths": {
+        "/excel/enrichment": {
+            "post": {
+                "description": "Enrichment excel file, limit entiies in file = 10000",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "excel"
+                ],
+                "summary": "ProductsEnrichedExcel",
+                "operationId": "enrich_excel",
+                "parameters": [
+                    {
+                        "description": "binary excel file",
+                        "name": "excel_file",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/excel_template": {
             "get": {
                 "description": "download excel table template",
                 "produces": [
-                    "application/vnd.ms-excel"
+                    "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                 ],
                 "tags": [
                     "excel"
@@ -57,9 +107,6 @@
         "/load_from_excel": {
             "post": {
                 "description": "upload excel table containing products info",
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "excel"
                 ],
@@ -67,11 +114,16 @@
                 "operationId": "load_from_excel",
                 "parameters": [
                     {
-                        "type": "file",
-                        "description": "excel file",
+                        "description": "binary excel file",
                         "name": "excel_file",
-                        "in": "formData",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        }
                     },
                     {
                         "type": "string",
@@ -159,7 +211,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.GetProductsHistoryRequest"
+                            "$ref": "#/definitions/model.UploadIdRequest"
                         }
                     }
                 ],
@@ -255,28 +307,19 @@
                 }
             }
         },
-        "model.GetProductsHistoryRequest": {
-            "type": "object",
-            "properties": {
-                "UploadID": {
-                    "type": "integer",
-                    "example": 1
-                }
-            }
-        },
         "model.Product": {
             "type": "object",
             "properties": {
                 "article": {
                     "type": "string"
                 },
-                "brand": {
+                "articleSupplier": {
                     "type": "string"
                 },
-                "cardNumber": {
-                    "type": "integer"
+                "barcode": {
+                    "type": "string"
                 },
-                "category": {
+                "brand": {
                     "type": "string"
                 },
                 "errorResponse": {
@@ -285,20 +328,14 @@
                 "id": {
                     "type": "integer"
                 },
-                "manufacturerArticle": {
-                    "type": "string"
-                },
                 "price": {
                     "type": "integer"
                 },
-                "providerArticle": {
-                    "type": "string"
-                },
-                "sku": {
-                    "type": "string"
-                },
                 "status": {
                     "type": "integer"
+                },
+                "subject": {
+                    "type": "string"
                 },
                 "updateDate": {
                     "type": "string"
@@ -343,6 +380,15 @@
                 },
                 "userID": {
                     "type": "integer"
+                }
+            }
+        },
+        "model.UploadIdRequest": {
+            "type": "object",
+            "properties": {
+                "uploadID": {
+                    "type": "integer",
+                    "example": 1
                 }
             }
         }
